// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BillingDetailsForm component should display loader 1`] = `
<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <BillingDetailsFormContainer
    contact={null}
    fetchContact={[Function]}
    updateContact={null}
  >
    <div
      className="full-width"
    >
      <PageHeader
        title={
          <Breadcrumb
            aria-label="breadcrumb"
            listTag="ol"
            tag="nav"
          >
            <BreadcrumbItem
              tag="li"
            >
              <Link
                className="section"
                to="/app/settings/billing/"
              >
                Billing & Usage
              </Link>
            </BreadcrumbItem>
            <BreadcrumbItem
              tag="li"
            >
              Billing details
            </BreadcrumbItem>
          </Breadcrumb>
        }
      >
        <div
          className="page-header pageHeader"
        >
          <Breadcrumb
            aria-label="breadcrumb"
            listTag="ol"
            tag="nav"
          >
            <nav
              aria-label="breadcrumb"
              className=""
            >
              <ol
                className="breadcrumb"
              >
                <BreadcrumbItem
                  tag="li"
                >
                  <li
                    className="breadcrumb-item"
                  >
                    <Link
                      className="section"
                      to="/app/settings/billing/"
                    >
                      <a
                        className="section"
                        to="/app/settings/billing/"
                      >
                        Billing & Usage
                      </a>
                    </Link>
                  </li>
                </BreadcrumbItem>
                <BreadcrumbItem
                  tag="li"
                >
                  <li
                    className="breadcrumb-item"
                  >
                    Billing details
                  </li>
                </BreadcrumbItem>
              </ol>
            </nav>
          </Breadcrumb>
        </div>
      </PageHeader>
      <Container
        className="pageContainer"
        fluid={true}
        tag="div"
      >
        <div
          className="pageContainer container-fluid"
        >
          <p>
            Please enter the billing details you'd like us to use on your next invoice.
          </p>
          <Row
            tag="div"
            widths={
              Array [
                "xs",
                "sm",
                "md",
                "lg",
                "xl",
              ]
            }
          >
            <div
              className="row"
            >
              <Col
                lg={6}
                tag="div"
                widths={
                  Array [
                    "xs",
                    "sm",
                    "md",
                    "lg",
                    "xl",
                  ]
                }
              >
                <div
                  className="col-lg-6"
                >
                  <Loader
                    inline={false}
                    minHeight="500px"
                    size="40px"
                  >
                    <div
                      className="container"
                    >
                      <div
                        className="inner"
                        style={
                          Object {
                            "minHeight": "500px",
                          }
                        }
                      >
                        <i
                          className="icon-custom icon-circle-o-notch md-spin"
                          style={
                            Object {
                              "fontSize": "40px",
                            }
                          }
                        />
                      </div>
                    </div>
                  </Loader>
                </div>
              </Col>
            </div>
          </Row>
        </div>
      </Container>
    </div>
  </BillingDetailsFormContainer>
</Provider>
`;

exports[`BillingDetailsForm component should display not display the form 1`] = `
<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <BillingDetailsFormContainer
    contact={null}
    fetchContact={[Function]}
    updateContact={null}
  >
    <div
      className="full-width"
    >
      <PageHeader
        title={
          <Breadcrumb
            aria-label="breadcrumb"
            listTag="ol"
            tag="nav"
          >
            <BreadcrumbItem
              tag="li"
            >
              <Link
                className="section"
                to="/app/settings/billing/"
              >
                Billing & Usage
              </Link>
            </BreadcrumbItem>
            <BreadcrumbItem
              tag="li"
            >
              Billing details
            </BreadcrumbItem>
          </Breadcrumb>
        }
      >
        <div
          className="page-header pageHeader"
        >
          <Breadcrumb
            aria-label="breadcrumb"
            listTag="ol"
            tag="nav"
          >
            <nav
              aria-label="breadcrumb"
              className=""
            >
              <ol
                className="breadcrumb"
              >
                <BreadcrumbItem
                  tag="li"
                >
                  <li
                    className="breadcrumb-item"
                  >
                    <Link
                      className="section"
                      to="/app/settings/billing/"
                    >
                      <a
                        className="section"
                        to="/app/settings/billing/"
                      >
                        Billing & Usage
                      </a>
                    </Link>
                  </li>
                </BreadcrumbItem>
                <BreadcrumbItem
                  tag="li"
                >
                  <li
                    className="breadcrumb-item"
                  >
                    Billing details
                  </li>
                </BreadcrumbItem>
              </ol>
            </nav>
          </Breadcrumb>
        </div>
      </PageHeader>
      <Container
        className="pageContainer"
        fluid={true}
        tag="div"
      >
        <div
          className="pageContainer container-fluid"
        >
          <p>
            Please enter the billing details you'd like us to use on your next invoice.
          </p>
          <Row
            tag="div"
            widths={
              Array [
                "xs",
                "sm",
                "md",
                "lg",
                "xl",
              ]
            }
          >
            <div
              className="row"
            >
              <Col
                lg={6}
                tag="div"
                widths={
                  Array [
                    "xs",
                    "sm",
                    "md",
                    "lg",
                    "xl",
                  ]
                }
              >
                <div
                  className="col-lg-6"
                >
                  <Form
                    onSubmit={[Function]}
                    tag="form"
                  >
                    <form
                      className=""
                      onSubmit={[Function]}
                    >
                      <BillingAddressInputs
                        onChange={[Function]}
                        value={
                          Object {
                            "email": "",
                            "shipping": Object {
                              "address": Object {
                                "city": "",
                                "country": "",
                                "line1": "",
                                "line2": "",
                                "postal_code": "",
                                "state": "",
                              },
                              "name": "",
                              "phone": "",
                            },
                          }
                        }
                      >
                        <InputField
                          help="Invoices are sent to this email address."
                          label="Email"
                          name="email"
                          onChange={[Function]}
                          placeholder="your@email.com"
                          required={true}
                          type="email"
                          value=""
                        >
                          <FormGroup
                            className="InputField required"
                            color=""
                            tag="div"
                          >
                            <div
                              className="InputField required form-group"
                              color=""
                            >
                              <Label
                                className="control-label"
                                htmlFor="id-email"
                                tag="label"
                                widths={
                                  Array [
                                    "xs",
                                    "sm",
                                    "md",
                                    "lg",
                                    "xl",
                                  ]
                                }
                              >
                                <label
                                  className="control-label"
                                  htmlFor="id-email"
                                >
                                  Email
                                </label>
                              </Label>
                              <div
                                className=""
                              >
                                <Input
                                  className=""
                                  id="id-email"
                                  onChange={[Function]}
                                  placeholder="your@email.com"
                                  required={true}
                                  type="email"
                                  value=""
                                >
                                  <input
                                    className="form-control"
                                    id="id-email"
                                    onChange={[Function]}
                                    placeholder="your@email.com"
                                    required={true}
                                    type="email"
                                    value=""
                                  />
                                </Input>
                              </div>
                              <FormText
                                color="muted"
                                tag="small"
                              >
                                <small
                                  className="form-text text-muted"
                                >
                                  Invoices are sent to this email address.
                                </small>
                              </FormText>
                            </div>
                          </FormGroup>
                        </InputField>
                        <Row
                          className="formRow"
                          tag="div"
                          widths={
                            Array [
                              "xs",
                              "sm",
                              "md",
                              "lg",
                              "xl",
                            ]
                          }
                        >
                          <div
                            className="formRow row"
                          >
                            <Col
                              className="formColumn"
                              lg={6}
                              tag="div"
                              widths={
                                Array [
                                  "xs",
                                  "sm",
                                  "md",
                                  "lg",
                                  "xl",
                                ]
                              }
                            >
                              <div
                                className="formColumn col-lg-6"
                              >
                                <InputField
                                  label="Company name"
                                  name="name"
                                  onChange={[Function]}
                                  placeholder="e.g. Gorgias"
                                  type="text"
                                  value=""
                                >
                                  <FormGroup
                                    className="InputField"
                                    color=""
                                    tag="div"
                                  >
                                    <div
                                      className="InputField form-group"
                                      color=""
                                    >
                                      <Label
                                        className="control-label"
                                        htmlFor="id-name"
                                        tag="label"
                                        widths={
                                          Array [
                                            "xs",
                                            "sm",
                                            "md",
                                            "lg",
                                            "xl",
                                          ]
                                        }
                                      >
                                        <label
                                          className="control-label"
                                          htmlFor="id-name"
                                        >
                                          Company name
                                        </label>
                                      </Label>
                                      <div
                                        className=""
                                      >
                                        <Input
                                          className=""
                                          id="id-name"
                                          onChange={[Function]}
                                          placeholder="e.g. Gorgias"
                                          type="text"
                                          value=""
                                        >
                                          <input
                                            className="form-control"
                                            id="id-name"
                                            onChange={[Function]}
                                            placeholder="e.g. Gorgias"
                                            type="text"
                                            value=""
                                          />
                                        </Input>
                                      </div>
                                    </div>
                                  </FormGroup>
                                </InputField>
                              </div>
                            </Col>
                            <Col
                              className="formColumn"
                              lg={6}
                              tag="div"
                              widths={
                                Array [
                                  "xs",
                                  "sm",
                                  "md",
                                  "lg",
                                  "xl",
                                ]
                              }
                            >
                              <div
                                className="formColumn col-lg-6"
                              >
                                <InputField
                                  label="Phone number"
                                  name="phone"
                                  onChange={[Function]}
                                  placeholder="415 859 3010"
                                  type="tel"
                                  value=""
                                >
                                  <FormGroup
                                    className="InputField"
                                    color=""
                                    tag="div"
                                  >
                                    <div
                                      className="InputField form-group"
                                      color=""
                                    >
                                      <Label
                                        className="control-label"
                                        htmlFor="id-phone"
                                        tag="label"
                                        widths={
                                          Array [
                                            "xs",
                                            "sm",
                                            "md",
                                            "lg",
                                            "xl",
                                          ]
                                        }
                                      >
                                        <label
                                          className="control-label"
                                          htmlFor="id-phone"
                                        >
                                          Phone number
                                        </label>
                                      </Label>
                                      <div
                                        className=""
                                      >
                                        <Input
                                          className=""
                                          id="id-phone"
                                          onChange={[Function]}
                                          placeholder="415 859 3010"
                                          type="tel"
                                          value=""
                                        >
                                          <input
                                            className="form-control"
                                            id="id-phone"
                                            onChange={[Function]}
                                            placeholder="415 859 3010"
                                            type="tel"
                                            value=""
                                          />
                                        </Input>
                                      </div>
                                    </div>
                                  </FormGroup>
                                </InputField>
                              </div>
                            </Col>
                          </div>
                        </Row>
                        <InputField
                          label="Street address"
                          name="line1"
                          onChange={[Function]}
                          placeholder="Gorgias Street"
                          required={true}
                          type="text"
                          value=""
                        >
                          <FormGroup
                            className="InputField required"
                            color=""
                            tag="div"
                          >
                            <div
                              className="InputField required form-group"
                              color=""
                            >
                              <Label
                                className="control-label"
                                htmlFor="id-line1"
                                tag="label"
                                widths={
                                  Array [
                                    "xs",
                                    "sm",
                                    "md",
                                    "lg",
                                    "xl",
                                  ]
                                }
                              >
                                <label
                                  className="control-label"
                                  htmlFor="id-line1"
                                >
                                  Street address
                                </label>
                              </Label>
                              <div
                                className=""
                              >
                                <Input
                                  className=""
                                  id="id-line1"
                                  onChange={[Function]}
                                  placeholder="Gorgias Street"
                                  required={true}
                                  type="text"
                                  value=""
                                >
                                  <input
                                    className="form-control"
                                    id="id-line1"
                                    onChange={[Function]}
                                    placeholder="Gorgias Street"
                                    required={true}
                                    type="text"
                                    value=""
                                  />
                                </Input>
                              </div>
                            </div>
                          </FormGroup>
                        </InputField>
                        <InputField
                          label="Suite/Unit"
                          name="line2"
                          onChange={[Function]}
                          placeholder="e.g. Unit #2, Floor 5"
                          type="text"
                          value=""
                        >
                          <FormGroup
                            className="InputField"
                            color=""
                            tag="div"
                          >
                            <div
                              className="InputField form-group"
                              color=""
                            >
                              <Label
                                className="control-label"
                                htmlFor="id-line2"
                                tag="label"
                                widths={
                                  Array [
                                    "xs",
                                    "sm",
                                    "md",
                                    "lg",
                                    "xl",
                                  ]
                                }
                              >
                                <label
                                  className="control-label"
                                  htmlFor="id-line2"
                                >
                                  Suite/Unit
                                </label>
                              </Label>
                              <div
                                className=""
                              >
                                <Input
                                  className=""
                                  id="id-line2"
                                  onChange={[Function]}
                                  placeholder="e.g. Unit #2, Floor 5"
                                  type="text"
                                  value=""
                                >
                                  <input
                                    className="form-control"
                                    id="id-line2"
                                    onChange={[Function]}
                                    placeholder="e.g. Unit #2, Floor 5"
                                    type="text"
                                    value=""
                                  />
                                </Input>
                              </div>
                            </div>
                          </FormGroup>
                        </InputField>
                        <Row
                          className="formRow"
                          tag="div"
                          widths={
                            Array [
                              "xs",
                              "sm",
                              "md",
                              "lg",
                              "xl",
                            ]
                          }
                        >
                          <div
                            className="formRow row"
                          >
                            <Col
                              className="formColumn"
                              lg={6}
                              tag="div"
                              widths={
                                Array [
                                  "xs",
                                  "sm",
                                  "md",
                                  "lg",
                                  "xl",
                                ]
                              }
                            >
                              <div
                                className="formColumn col-lg-6"
                              >
                                <InputField
                                  label="Country"
                                  name="country"
                                  onChange={[Function]}
                                  required={true}
                                  type="select"
                                  value=""
                                >
                                  <FormGroup
                                    className="InputField required"
                                    color=""
                                    tag="div"
                                  >
                                    <div
                                      className="InputField required form-group"
                                      color=""
                                    >
                                      <Label
                                        className="control-label"
                                        htmlFor="id-country"
                                        tag="label"
                                        widths={
                                          Array [
                                            "xs",
                                            "sm",
                                            "md",
                                            "lg",
                                            "xl",
                                          ]
                                        }
                                      >
                                        <label
                                          className="control-label"
                                          htmlFor="id-country"
                                        >
                                          Country
                                        </label>
                                      </Label>
                                      <div
                                        className=""
                                      >
                                        <Input
                                          className=""
                                          id="id-country"
                                          onChange={[Function]}
                                          required={true}
                                          type="select"
                                          value=""
                                        >
                                          <select
                                            className="form-control"
                                            id="id-country"
                                            onChange={[Function]}
                                            required={true}
                                            value=""
                                          >
                                            <option
                                              value=""
                                            >
                                              -
                                            </option>
                                            <option
                                              key="FR"
                                              value="FR"
                                            >
                                              France
                                            </option>
                                            <option
                                              key="US"
                                              value="US"
                                            >
                                              United States
                                            </option>
                                          </select>
                                        </Input>
                                      </div>
                                    </div>
                                  </FormGroup>
                                </InputField>
                              </div>
                            </Col>
                            <Col
                              className="formColumn"
                              lg={6}
                              tag="div"
                              widths={
                                Array [
                                  "xs",
                                  "sm",
                                  "md",
                                  "lg",
                                  "xl",
                                ]
                              }
                            >
                              <div
                                className="formColumn col-lg-6"
                              >
                                <InputField
                                  label="Zip code"
                                  name="postalCode"
                                  onChange={[Function]}
                                  placeholder="94103"
                                  required={true}
                                  type="text"
                                  value=""
                                >
                                  <FormGroup
                                    className="InputField required"
                                    color=""
                                    tag="div"
                                  >
                                    <div
                                      className="InputField required form-group"
                                      color=""
                                    >
                                      <Label
                                        className="control-label"
                                        htmlFor="id-postalCode"
                                        tag="label"
                                        widths={
                                          Array [
                                            "xs",
                                            "sm",
                                            "md",
                                            "lg",
                                            "xl",
                                          ]
                                        }
                                      >
                                        <label
                                          className="control-label"
                                          htmlFor="id-postalCode"
                                        >
                                          Zip code
                                        </label>
                                      </Label>
                                      <div
                                        className=""
                                      >
                                        <Input
                                          className=""
                                          id="id-postalCode"
                                          onChange={[Function]}
                                          placeholder="94103"
                                          required={true}
                                          type="text"
                                          value=""
                                        >
                                          <input
                                            className="form-control"
                                            id="id-postalCode"
                                            onChange={[Function]}
                                            placeholder="94103"
                                            required={true}
                                            type="text"
                                            value=""
                                          />
                                        </Input>
                                      </div>
                                    </div>
                                  </FormGroup>
                                </InputField>
                              </div>
                            </Col>
                          </div>
                        </Row>
                        <Row
                          className="formRow"
                          tag="div"
                          widths={
                            Array [
                              "xs",
                              "sm",
                              "md",
                              "lg",
                              "xl",
                            ]
                          }
                        >
                          <div
                            className="formRow row"
                          >
                            <Col
                              className="formColumn"
                              lg={false}
                              tag="div"
                              widths={
                                Array [
                                  "xs",
                                  "sm",
                                  "md",
                                  "lg",
                                  "xl",
                                ]
                              }
                            >
                              <div
                                className="formColumn col"
                              >
                                <InputField
                                  label="City"
                                  name="city"
                                  onChange={[Function]}
                                  placeholder="New York"
                                  required={true}
                                  type="text"
                                  value=""
                                >
                                  <FormGroup
                                    className="InputField required"
                                    color=""
                                    tag="div"
                                  >
                                    <div
                                      className="InputField required form-group"
                                      color=""
                                    >
                                      <Label
                                        className="control-label"
                                        htmlFor="id-city"
                                        tag="label"
                                        widths={
                                          Array [
                                            "xs",
                                            "sm",
                                            "md",
                                            "lg",
                                            "xl",
                                          ]
                                        }
                                      >
                                        <label
                                          className="control-label"
                                          htmlFor="id-city"
                                        >
                                          City
                                        </label>
                                      </Label>
                                      <div
                                        className=""
                                      >
                                        <Input
                                          className=""
                                          id="id-city"
                                          onChange={[Function]}
                                          placeholder="New York"
                                          required={true}
                                          type="text"
                                          value=""
                                        >
                                          <input
                                            className="form-control"
                                            id="id-city"
                                            onChange={[Function]}
                                            placeholder="New York"
                                            required={true}
                                            type="text"
                                            value=""
                                          />
                                        </Input>
                                      </div>
                                    </div>
                                  </FormGroup>
                                </InputField>
                              </div>
                            </Col>
                          </div>
                        </Row>
                      </BillingAddressInputs>
                      <div>
                        <Button
                          className=""
                          color="success"
                          disabled={false}
                          tag="button"
                        >
                          <button
                            aria-label={null}
                            className="btn btn-success"
                            disabled={false}
                            onClick={[Function]}
                          >
                            Update billing details
                          </button>
                        </Button>
                      </div>
                    </form>
                  </Form>
                </div>
              </Col>
            </div>
          </Row>
        </div>
      </Container>
    </div>
  </BillingDetailsFormContainer>
</Provider>
`;

exports[`BillingDetailsForm component should display the form with billing contact information 1`] = `
<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <BillingDetailsFormContainer
    contact={
      Immutable.Map {
        "email": "hello@acme.gorgias.io",
        "shipping": Immutable.Map {
          "name": "Gorgias",
          "phone": "4155555556",
          "address": Immutable.Map {
            "line1": "52 Washburn St",
            "line2": "",
            "city": "San Francisco",
            "state": "CA",
            "country": "United States",
            "postal_code": "94103",
          },
        },
      }
    }
    fetchContact={[Function]}
    updateContact={null}
  >
    <div
      className="full-width"
    >
      <PageHeader
        title={
          <Breadcrumb
            aria-label="breadcrumb"
            listTag="ol"
            tag="nav"
          >
            <BreadcrumbItem
              tag="li"
            >
              <Link
                className="section"
                to="/app/settings/billing/"
              >
                Billing & Usage
              </Link>
            </BreadcrumbItem>
            <BreadcrumbItem
              tag="li"
            >
              Billing details
            </BreadcrumbItem>
          </Breadcrumb>
        }
      >
        <div
          className="page-header pageHeader"
        >
          <Breadcrumb
            aria-label="breadcrumb"
            listTag="ol"
            tag="nav"
          >
            <nav
              aria-label="breadcrumb"
              className=""
            >
              <ol
                className="breadcrumb"
              >
                <BreadcrumbItem
                  tag="li"
                >
                  <li
                    className="breadcrumb-item"
                  >
                    <Link
                      className="section"
                      to="/app/settings/billing/"
                    >
                      <a
                        className="section"
                        to="/app/settings/billing/"
                      >
                        Billing & Usage
                      </a>
                    </Link>
                  </li>
                </BreadcrumbItem>
                <BreadcrumbItem
                  tag="li"
                >
                  <li
                    className="breadcrumb-item"
                  >
                    Billing details
                  </li>
                </BreadcrumbItem>
              </ol>
            </nav>
          </Breadcrumb>
        </div>
      </PageHeader>
      <Container
        className="pageContainer"
        fluid={true}
        tag="div"
      >
        <div
          className="pageContainer container-fluid"
        >
          <p>
            Please enter the billing details you'd like us to use on your next invoice.
          </p>
          <Row
            tag="div"
            widths={
              Array [
                "xs",
                "sm",
                "md",
                "lg",
                "xl",
              ]
            }
          >
            <div
              className="row"
            >
              <Col
                lg={6}
                tag="div"
                widths={
                  Array [
                    "xs",
                    "sm",
                    "md",
                    "lg",
                    "xl",
                  ]
                }
              >
                <div
                  className="col-lg-6"
                >
                  <Form
                    onSubmit={[Function]}
                    tag="form"
                  >
                    <form
                      className=""
                      onSubmit={[Function]}
                    >
                      <BillingAddressInputs
                        onChange={[Function]}
                        value={
                          Object {
                            "email": "hello@acme.gorgias.io",
                            "shipping": Object {
                              "address": Object {
                                "city": "San Francisco",
                                "country": "United States",
                                "line1": "52 Washburn St",
                                "line2": "",
                                "postal_code": "94103",
                                "state": "CA",
                              },
                              "name": "Gorgias",
                              "phone": "4155555556",
                            },
                          }
                        }
                      >
                        <InputField
                          help="Invoices are sent to this email address."
                          label="Email"
                          name="email"
                          onChange={[Function]}
                          placeholder="your@email.com"
                          required={true}
                          type="email"
                          value="hello@acme.gorgias.io"
                        >
                          <FormGroup
                            className="InputField required"
                            color=""
                            tag="div"
                          >
                            <div
                              className="InputField required form-group"
                              color=""
                            >
                              <Label
                                className="control-label"
                                htmlFor="id-email"
                                tag="label"
                                widths={
                                  Array [
                                    "xs",
                                    "sm",
                                    "md",
                                    "lg",
                                    "xl",
                                  ]
                                }
                              >
                                <label
                                  className="control-label"
                                  htmlFor="id-email"
                                >
                                  Email
                                </label>
                              </Label>
                              <div
                                className=""
                              >
                                <Input
                                  className=""
                                  id="id-email"
                                  onChange={[Function]}
                                  placeholder="your@email.com"
                                  required={true}
                                  type="email"
                                  value="hello@acme.gorgias.io"
                                >
                                  <input
                                    className="form-control"
                                    id="id-email"
                                    onChange={[Function]}
                                    placeholder="your@email.com"
                                    required={true}
                                    type="email"
                                    value="hello@acme.gorgias.io"
                                  />
                                </Input>
                              </div>
                              <FormText
                                color="muted"
                                tag="small"
                              >
                                <small
                                  className="form-text text-muted"
                                >
                                  Invoices are sent to this email address.
                                </small>
                              </FormText>
                            </div>
                          </FormGroup>
                        </InputField>
                        <Row
                          className="formRow"
                          tag="div"
                          widths={
                            Array [
                              "xs",
                              "sm",
                              "md",
                              "lg",
                              "xl",
                            ]
                          }
                        >
                          <div
                            className="formRow row"
                          >
                            <Col
                              className="formColumn"
                              lg={6}
                              tag="div"
                              widths={
                                Array [
                                  "xs",
                                  "sm",
                                  "md",
                                  "lg",
                                  "xl",
                                ]
                              }
                            >
                              <div
                                className="formColumn col-lg-6"
                              >
                                <InputField
                                  label="Company name"
                                  name="name"
                                  onChange={[Function]}
                                  placeholder="e.g. Gorgias"
                                  type="text"
                                  value="Gorgias"
                                >
                                  <FormGroup
                                    className="InputField"
                                    color=""
                                    tag="div"
                                  >
                                    <div
                                      className="InputField form-group"
                                      color=""
                                    >
                                      <Label
                                        className="control-label"
                                        htmlFor="id-name"
                                        tag="label"
                                        widths={
                                          Array [
                                            "xs",
                                            "sm",
                                            "md",
                                            "lg",
                                            "xl",
                                          ]
                                        }
                                      >
                                        <label
                                          className="control-label"
                                          htmlFor="id-name"
                                        >
                                          Company name
                                        </label>
                                      </Label>
                                      <div
                                        className=""
                                      >
                                        <Input
                                          className=""
                                          id="id-name"
                                          onChange={[Function]}
                                          placeholder="e.g. Gorgias"
                                          type="text"
                                          value="Gorgias"
                                        >
                                          <input
                                            className="form-control"
                                            id="id-name"
                                            onChange={[Function]}
                                            placeholder="e.g. Gorgias"
                                            type="text"
                                            value="Gorgias"
                                          />
                                        </Input>
                                      </div>
                                    </div>
                                  </FormGroup>
                                </InputField>
                              </div>
                            </Col>
                            <Col
                              className="formColumn"
                              lg={6}
                              tag="div"
                              widths={
                                Array [
                                  "xs",
                                  "sm",
                                  "md",
                                  "lg",
                                  "xl",
                                ]
                              }
                            >
                              <div
                                className="formColumn col-lg-6"
                              >
                                <InputField
                                  label="Phone number"
                                  name="phone"
                                  onChange={[Function]}
                                  placeholder="415 859 3010"
                                  type="tel"
                                  value="4155555556"
                                >
                                  <FormGroup
                                    className="InputField"
                                    color=""
                                    tag="div"
                                  >
                                    <div
                                      className="InputField form-group"
                                      color=""
                                    >
                                      <Label
                                        className="control-label"
                                        htmlFor="id-phone"
                                        tag="label"
                                        widths={
                                          Array [
                                            "xs",
                                            "sm",
                                            "md",
                                            "lg",
                                            "xl",
                                          ]
                                        }
                                      >
                                        <label
                                          className="control-label"
                                          htmlFor="id-phone"
                                        >
                                          Phone number
                                        </label>
                                      </Label>
                                      <div
                                        className=""
                                      >
                                        <Input
                                          className=""
                                          id="id-phone"
                                          onChange={[Function]}
                                          placeholder="415 859 3010"
                                          type="tel"
                                          value="4155555556"
                                        >
                                          <input
                                            className="form-control"
                                            id="id-phone"
                                            onChange={[Function]}
                                            placeholder="415 859 3010"
                                            type="tel"
                                            value="4155555556"
                                          />
                                        </Input>
                                      </div>
                                    </div>
                                  </FormGroup>
                                </InputField>
                              </div>
                            </Col>
                          </div>
                        </Row>
                        <InputField
                          label="Street address"
                          name="line1"
                          onChange={[Function]}
                          placeholder="Gorgias Street"
                          required={true}
                          type="text"
                          value="52 Washburn St"
                        >
                          <FormGroup
                            className="InputField required"
                            color=""
                            tag="div"
                          >
                            <div
                              className="InputField required form-group"
                              color=""
                            >
                              <Label
                                className="control-label"
                                htmlFor="id-line1"
                                tag="label"
                                widths={
                                  Array [
                                    "xs",
                                    "sm",
                                    "md",
                                    "lg",
                                    "xl",
                                  ]
                                }
                              >
                                <label
                                  className="control-label"
                                  htmlFor="id-line1"
                                >
                                  Street address
                                </label>
                              </Label>
                              <div
                                className=""
                              >
                                <Input
                                  className=""
                                  id="id-line1"
                                  onChange={[Function]}
                                  placeholder="Gorgias Street"
                                  required={true}
                                  type="text"
                                  value="52 Washburn St"
                                >
                                  <input
                                    className="form-control"
                                    id="id-line1"
                                    onChange={[Function]}
                                    placeholder="Gorgias Street"
                                    required={true}
                                    type="text"
                                    value="52 Washburn St"
                                  />
                                </Input>
                              </div>
                            </div>
                          </FormGroup>
                        </InputField>
                        <InputField
                          label="Suite/Unit"
                          name="line2"
                          onChange={[Function]}
                          placeholder="e.g. Unit #2, Floor 5"
                          type="text"
                          value=""
                        >
                          <FormGroup
                            className="InputField"
                            color=""
                            tag="div"
                          >
                            <div
                              className="InputField form-group"
                              color=""
                            >
                              <Label
                                className="control-label"
                                htmlFor="id-line2"
                                tag="label"
                                widths={
                                  Array [
                                    "xs",
                                    "sm",
                                    "md",
                                    "lg",
                                    "xl",
                                  ]
                                }
                              >
                                <label
                                  className="control-label"
                                  htmlFor="id-line2"
                                >
                                  Suite/Unit
                                </label>
                              </Label>
                              <div
                                className=""
                              >
                                <Input
                                  className=""
                                  id="id-line2"
                                  onChange={[Function]}
                                  placeholder="e.g. Unit #2, Floor 5"
                                  type="text"
                                  value=""
                                >
                                  <input
                                    className="form-control"
                                    id="id-line2"
                                    onChange={[Function]}
                                    placeholder="e.g. Unit #2, Floor 5"
                                    type="text"
                                    value=""
                                  />
                                </Input>
                              </div>
                            </div>
                          </FormGroup>
                        </InputField>
                        <Row
                          className="formRow"
                          tag="div"
                          widths={
                            Array [
                              "xs",
                              "sm",
                              "md",
                              "lg",
                              "xl",
                            ]
                          }
                        >
                          <div
                            className="formRow row"
                          >
                            <Col
                              className="formColumn"
                              lg={6}
                              tag="div"
                              widths={
                                Array [
                                  "xs",
                                  "sm",
                                  "md",
                                  "lg",
                                  "xl",
                                ]
                              }
                            >
                              <div
                                className="formColumn col-lg-6"
                              >
                                <InputField
                                  label="Country"
                                  name="country"
                                  onChange={[Function]}
                                  required={true}
                                  type="select"
                                  value="United States"
                                >
                                  <FormGroup
                                    className="InputField required"
                                    color=""
                                    tag="div"
                                  >
                                    <div
                                      className="InputField required form-group"
                                      color=""
                                    >
                                      <Label
                                        className="control-label"
                                        htmlFor="id-country"
                                        tag="label"
                                        widths={
                                          Array [
                                            "xs",
                                            "sm",
                                            "md",
                                            "lg",
                                            "xl",
                                          ]
                                        }
                                      >
                                        <label
                                          className="control-label"
                                          htmlFor="id-country"
                                        >
                                          Country
                                        </label>
                                      </Label>
                                      <div
                                        className=""
                                      >
                                        <Input
                                          className=""
                                          id="id-country"
                                          onChange={[Function]}
                                          required={true}
                                          type="select"
                                          value="United States"
                                        >
                                          <select
                                            className="form-control"
                                            id="id-country"
                                            onChange={[Function]}
                                            required={true}
                                            value="United States"
                                          >
                                            <option
                                              value=""
                                            >
                                              -
                                            </option>
                                            <option
                                              key="FR"
                                              value="FR"
                                            >
                                              France
                                            </option>
                                            <option
                                              key="US"
                                              value="US"
                                            >
                                              United States
                                            </option>
                                          </select>
                                        </Input>
                                      </div>
                                    </div>
                                  </FormGroup>
                                </InputField>
                              </div>
                            </Col>
                            <Col
                              className="formColumn"
                              lg={6}
                              tag="div"
                              widths={
                                Array [
                                  "xs",
                                  "sm",
                                  "md",
                                  "lg",
                                  "xl",
                                ]
                              }
                            >
                              <div
                                className="formColumn col-lg-6"
                              >
                                <InputField
                                  label="Zip code"
                                  name="postalCode"
                                  onChange={[Function]}
                                  placeholder="94103"
                                  required={true}
                                  type="text"
                                  value="94103"
                                >
                                  <FormGroup
                                    className="InputField required"
                                    color=""
                                    tag="div"
                                  >
                                    <div
                                      className="InputField required form-group"
                                      color=""
                                    >
                                      <Label
                                        className="control-label"
                                        htmlFor="id-postalCode"
                                        tag="label"
                                        widths={
                                          Array [
                                            "xs",
                                            "sm",
                                            "md",
                                            "lg",
                                            "xl",
                                          ]
                                        }
                                      >
                                        <label
                                          className="control-label"
                                          htmlFor="id-postalCode"
                                        >
                                          Zip code
                                        </label>
                                      </Label>
                                      <div
                                        className=""
                                      >
                                        <Input
                                          className=""
                                          id="id-postalCode"
                                          onChange={[Function]}
                                          placeholder="94103"
                                          required={true}
                                          type="text"
                                          value="94103"
                                        >
                                          <input
                                            className="form-control"
                                            id="id-postalCode"
                                            onChange={[Function]}
                                            placeholder="94103"
                                            required={true}
                                            type="text"
                                            value="94103"
                                          />
                                        </Input>
                                      </div>
                                    </div>
                                  </FormGroup>
                                </InputField>
                              </div>
                            </Col>
                          </div>
                        </Row>
                        <Row
                          className="formRow"
                          tag="div"
                          widths={
                            Array [
                              "xs",
                              "sm",
                              "md",
                              "lg",
                              "xl",
                            ]
                          }
                        >
                          <div
                            className="formRow row"
                          >
                            <Col
                              className="formColumn"
                              lg={false}
                              tag="div"
                              widths={
                                Array [
                                  "xs",
                                  "sm",
                                  "md",
                                  "lg",
                                  "xl",
                                ]
                              }
                            >
                              <div
                                className="formColumn col"
                              >
                                <InputField
                                  label="City"
                                  name="city"
                                  onChange={[Function]}
                                  placeholder="New York"
                                  required={true}
                                  type="text"
                                  value="San Francisco"
                                >
                                  <FormGroup
                                    className="InputField required"
                                    color=""
                                    tag="div"
                                  >
                                    <div
                                      className="InputField required form-group"
                                      color=""
                                    >
                                      <Label
                                        className="control-label"
                                        htmlFor="id-city"
                                        tag="label"
                                        widths={
                                          Array [
                                            "xs",
                                            "sm",
                                            "md",
                                            "lg",
                                            "xl",
                                          ]
                                        }
                                      >
                                        <label
                                          className="control-label"
                                          htmlFor="id-city"
                                        >
                                          City
                                        </label>
                                      </Label>
                                      <div
                                        className=""
                                      >
                                        <Input
                                          className=""
                                          id="id-city"
                                          onChange={[Function]}
                                          placeholder="New York"
                                          required={true}
                                          type="text"
                                          value="San Francisco"
                                        >
                                          <input
                                            className="form-control"
                                            id="id-city"
                                            onChange={[Function]}
                                            placeholder="New York"
                                            required={true}
                                            type="text"
                                            value="San Francisco"
                                          />
                                        </Input>
                                      </div>
                                    </div>
                                  </FormGroup>
                                </InputField>
                              </div>
                            </Col>
                          </div>
                        </Row>
                      </BillingAddressInputs>
                      <div>
                        <Button
                          className=""
                          color="success"
                          disabled={false}
                          tag="button"
                        >
                          <button
                            aria-label={null}
                            className="btn btn-success"
                            disabled={false}
                            onClick={[Function]}
                          >
                            Update billing details
                          </button>
                        </Button>
                      </div>
                    </form>
                  </Form>
                </div>
              </Col>
            </div>
          </Row>
        </div>
      </Container>
    </div>
  </BillingDetailsFormContainer>
</Provider>
`;
